# guardian

./: .gitignore  Cargo.toml  README.md  decisions.csv  memories.csv  naming.sh  todo.csv  vocabulary.csv
.cursor/: mcp.json
crates/guardian-macros/: Cargo.toml  naming_detail.csv  naming_report.csv  naming_report.json  naming_report.md  naming_report.txt
crates/guardian-macros/src/: definition.rs  error.rs  generator.rs  lib.rs
crates/guardian-macros/tests/ui/: fail_invalid_type.rs  fail_invalid_type.stderr  pass_basic.rs
crates/storage/: Cargo.toml  naming_detail.csv  naming_report.csv  naming_report.json  naming_report.md  naming_report.txt
crates/storage/benches/: storage_benchmarks.rs
crates/storage/src/: compaction.rs  error.rs  index.rs  lib.rs  main.rs  model.rs  sdk.rs  segment.rs
crates/storage/tests/: integration_test.rs  macro_test.rs
