[package]
name = "guardian-store"
version = "1.0.0"
edition = "2021"
authors = ["Guardian <architect@guardian-store.com>"]
description = "High-performance storage system with architectural elegance"
license = "MIT"

[dependencies]
# Core serialization framework
rkyv = { version = "0.7.45", features = ["validation"] }

# Proc-macro dependencies
guardian-macros = { path = "../guardian-macros" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI framework
clap = { version = "4.0", features = ["derive"] }

# Serialization for CLI
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing
proptest = "1.0"
criterion = "0.5"

[dev-dependencies]
tempfile = "3.0"

[[bench]]
name = "storage_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 